Bug 382616 - Autofill transaction number
Summary: Autofill transaction number
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8.0
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-23 10:25 UTC by tj88
Modified: 2019-08-30 16:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tj88 2017-07-23 10:25:30 UTC
Since my Kmymoney installation automatically updated to version 4.8.0 the transaction numbers aren't filled in automatically anymore. Since this is crucial for a acurate finance report I would love it if you could fix this. To me it is a big issue that it doesn't work right now. I don't want to switch to another program becouse Kmymoney really is the best out there!
Comment 1 Ralf Habacker 2017-07-25 07:53:51 UTC
Please provide step by step instructions how to reproduce this issue and if possible provide a test case to let developers be able to reproduce and fix this issue.
Comment 2 tj88 2017-07-27 10:08:26 UTC
It get reproduced every single time I press "new" in the ledger view.
Comment 3 Thomas Baumgart 2017-07-28 06:51:46 UTC
What is your setting of "Ledger/Data entry/Auto increment check number"? See also https://docs.kde.org/stable4/en/extragear-office/kmymoney/details.settings.register.html#details.settings.register.dataentry
Comment 4 Ralf Habacker 2018-09-19 22:40:22 UTC
The commit of bug 343106 is responsible for this bug.

In TransactionEditor::assignNextNumber(void) m_paymentMethod is checked for a value that is not normally set.
Comment 5 Ralf Habacker 2018-09-19 23:40:11 UTC
Git commit 150f0bd6ea906c3b1739f2a1ea85a61b6328f227 by Ralf Habacker.
Committed on 19/09/2018 at 23:39.
Pushed by habacker into branch '4.8'.

Fix 'Autofill transaction number'

This commit fixes a regression introduced with
http://commits.kde.org/kmymoney/ea9a548272903ec657993eba011c6e72695d632d
FIXED-IN:4.8.3

M  +2    -1    kmymoney/dialogs/transactioneditor.cpp

https://commits.kde.org/kmymoney/150f0bd6ea906c3b1739f2a1ea85a61b6328f227