Fix 'Autofill transaction number'

This commit fixes a regression introduced with
http://commits.kde.org/kmymoney/ea9a548272903ec657993eba011c6e72695d632d

BUG:382616
FIXED-IN:4.8.3